# AioBotTemplate

./: .env.copy  .gitignore  bot.py  config.py  main.py  pyproject.toml  readme.md  setup.cfg
aiobot/: __init__.py
aiobot/dispatcher/: __init__.py
aiobot/handlers/: commands.py
aiobot/models/: user.py
database/: __init__.py  database.py
database/models/: user.py
dispatcher/: dispatcher.py
